package com.cliff.patterns.pt28_bridge;

/**
 * author:CliffLeopard
 * date:2021/9/15
 * time:09:24
 * email:precipiceleopard@gmail.com
 * link:
 */
public interface Implementor {
    public void doSomething();

    public void doAnything();
}
